--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "np": "^7.6.3",
     "request": "^2.88.2"
   }
 }
